products/governance-snapshot/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: governance-snapshot
  namespace: governance-snapshot
  labels:
    "app.kubernetes.io/name": "governance-snapshot"
spec:
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/name": "governance-snapshot"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": "governance-snapshot"
    spec:
      containers:
        - image: governance-snapshot
          name: governance-snapshot
          ports:
            - containerPort: 80
          volumeMounts:
          - mountPath: /usr/share/nginx/html/config.js
            name: governance-snapshot-config
            subPath: config.js
      volumes:
      - name: governance-snapshot-config
        configMap:
          name: governance-snapshot-config
